# V

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  DOC_INDEX.md  FIXES_SUMMARY.md  LICENSE  Makefile  PROJECT_STATE.md  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  VECTRAS_ANALYSIS_COMPLETE.md  VECTRAS_DEEP_EVIDENCE.md  VECTRAS_MEGAPROMPT_DOCS.md  VECTRA_CORE.md  VERSION_STABILITY.md  build.gradle  gradle.properties  gradlew  local.properties.example  rmr_lowlevel.h  rmr_policy_kernel.h  rmr_unified_kernel.h  settings.gradle
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: android (2).yml  android-buil.yml  android-build-manual.yml  android-minimal-debug.yml  android-verified (1).yml  android.yml  ci.yml  engine-ci.yml  proof-build.yml  zipdrop.yml
RMR/: rafaelia_bitraf_core.c
addthis/: VECTRAS_BUGS.md  VECTRAS_REALITY_DIFF.md  rafaelia_audit.jsx  rafaelia_custody_stream.jsx (2).txt  readme.md  vectras_audit_files.jsx.txt  vectras_full_metrics.jsx.txt  vectras_speed_estimate.jsx
app/: FIREBASE.md  README.md  build (1).gradle  build.gradle  google-services.json  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  hardware_profile_bridge.c  hardware_profile_bridge_internal.h  lowlevel_bridge.c  vectra_core_accel.c  vectra_lowlevel_backend.h  vectra_lowlevel_backend_arm64.c  vectra_lowlevel_backend_armv7.c  vectra_lowlevel_backend_fallback.c  vectra_lowlevel_backend_riscv64.c  vectra_lowlevel_backend_x86.c  vectra_lowlevel_backend_x86_64.c
bench/src/: rmr_benchmark_main.c
bug/: ANALISE_CODIGO_VECTRAS_v3.6.5.md  BUG_FIXES_AND_PATCHES_EXACT_CODE.md  DEPLOYMENT_GUIDE_COMPLETO.md  FILES_MAP.md  GUIA_TECNICO_IMPLEMENTACAO_PATCHES.md  README.md  SOURCE_CODE_TRACEABILITY.md  STATUS_CORRECOES_VERIFICADAS.md  SUMARIO_EXECUTIVO.md  VECTRAS_VM_ADDITIONAL_56_BUGS.txt  VECTRAS_VM_ANALYSIS_SUMMARY.txt  VECTRAS_VM_COGNITIVE_STRATEGIC_TACTICAL_SOLUTIONS.txt  VECTRAS_VM_COMPLETE_BENCHTABLE_TESTS.txt  VECTRAS_VM_DETAILED_INVENTORY_COMPLETE.txt  VECTRAS_VM_EXPLICACAO_EXECUTIVA_CONSOLIDADA.txt  VECTRAS_VM_LISTA_76_BUGS.txt  VECTRAS_VM_SYSTEMIC_FAILURE_ANALYSIS.txt  Vectras_BugReport.md
bug/core/: LowLevelBridge.java  NativeFastPath.java  RafaeliaKernel.java  bitraf.c
bug/fazer hotfix/: FILES_MAP.md
bug/feito/: FILES_MAP.md  README.md
bug/issues/: FILES_MAP.md  ISSUE_FILEUTILS_BACKEND_MODE_AND_ISO_READONLY.md  ISSUE_MAINVNCACTIVITY_DISPATCHKEYEVENT_IME_COMPOSITION.md  ISSUE_TERMINALROW_COMBINING_LIMIT_AND_UNASSIGNED_WIDTH.md  README.md
bug/prioridade/: FILES_MAP.md
demo_cli/: FILES_MAP.md
demo_cli/src/: apk_module_demo.c  bitomega_smoketest.c  determinism_signature_selftest.c  main.c  math_fabric_selftest.c  policy_kernel_selftest.c  rmr_asm_equivalence_selftest.c  rmr_unified_arena_selftest.c  zipraf_core_selftest.c
docs/: ABSTRACT.md  API.md  ARCHITECTURE.md  BIBLIOGRAPHY.md  BUGFIX_REPORT.md  BUILD_ENV_ALIGNMENT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  FULLSTACK_SOURCE_MAP.md  GLOSSARY.md  IMAGES_INDEX.md  INTEGRACAO_RM_QEMU_ANDROIDX.md  OPERATIONS.md  PERFORMANCE_INTEGRITY.md  PREFACE.md  README.md  RESUMO.md  ROOT_FILES_CATALOG.md  SECURITY.md  VM_SUPERVISION_NEXT_5_STEPS.md
docs/assets/: CHAT_PROMPT_PROVENANCE.md  MANIFEST.md
docs/bitomega_postdoc/: README.md  validate_pack.sh
docs/navigation/: BENCHMARK_COMPARISONS.md  BIGTECH_REVOLUTION_ANNOUNCE.md  ENTERPRISE_COMPANIES.md  HIGH_LEVEL_INVESTORS.md  INDEX.md  PERFORMANCE_OPERATIONS.md  SCIENTISTS_RESEARCH.md  TECHNOLOGY_INNOVATION_AUTHORSHIP.md  UNIVERSITIES_ACADEMIC.md
engine/: README.md
engine/rmr/: README.md
engine/vectra_policy_kernel/: build.rs
gradle/wrapper/: gradle-wrapper.properties
reports/: external-dependency-hotspots.md
shell-loader/: build.gradle
shell-loader/stub/: build.gradle
terminal-emulator/: build.gradle
terminal-view/: build.gradle
tools/: FILES_MAP.md  bitomega_csv_to_dot.py  check_android_toolchain.sh  check_overlay_zip_duplicates.sh  check_sensitive_artifacts.sh  check_target_api_baseline.sh  configure_java_home.sh  dependency_hotspots.py  export_source_tarball.sh  gradle_with_jdk21.sh  prefetch_bootstrap_downloads.sh  verify_repo_file_dependencies.py
tools/apk/: build_release_signed_local.sh  rmr_termux_release_orchestrator.sh
tools/baremetal/: dir_integrity_matrix.sh
tools/ci/: materialize_google_services_placeholder.sh
tools/security/: block_sensitive_artifacts.sh
(+250 files in other folders)
